docs/api/qiskit/1.2/qiskit.pulse.library.Square.mdx
---
title: Square (v1.2)
description: API reference for qiskit.pulse.library.Square in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.pulse.library.Square
---

<span id="qiskit-pulse-library-square" />

# qiskit.pulse.library.Square

<Function id="qiskit.pulse.library.Square" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/pulse/library/symbolic_pulses.py#L1753-L1821" signature="qiskit.pulse.library.Square(duration, amp, phase, freq=None, angle=0.0, name=None, limit_amplitude=None)">
  A square wave pulse.

  The envelope of the pulse is given by:

$$
f(x) = \text{A}\text{sign}\left[\sin
\left(2\pi x\times\text{freq}+\text{phase}\right)\right]  ,  0 <= x < duration
$$

  where $\text{A} = \text{amp} \times\exp\left(i\times\text{angle}\right)$, and $\text{sign}$ is the sign function with the convention $\text{sign}\left(0\right)=1$.

  **Parameters**

  *   **duration** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| ParameterValueType*) – Pulse length in terms of the sampling period `dt`.
  *   **amp** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")) – The magnitude of the amplitude of the square wave. Wave range is $\left[-\texttt{amp},\texttt{amp}\right]$.
  *   **phase** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")) – The phase of the square wave (note that this is not equivalent to the angle of the complex amplitude).
  *   **freq** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") *| None*) – The frequency of the square wave, in terms of 1 over sampling period. If not provided defaults to a single cycle (i.e $\frac{1}{\text{duration}}$). The frequency is limited to the range $\left(0,0.5\right]$ (the Nyquist frequency).
  *   **angle** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") *| None*) – The angle in radians of the complex phase factor uniformly scaling the pulse. Default value 0.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – Display name for this pulse envelope.
  *   **limit\_amplitude** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)") *| None*) – If `True`, then limit the amplitude of the waveform to 1. The default is `True` and the amplitude is constrained to 1.

  **Returns**

  ScalableSymbolicPulse instance.

  **Return type**

  ScalableSymbolicPulse
</Function>

